@@ -1,9 +1,9 @@
-# Camunda BPM Platform Docker Images
-[![Build Status](https://travis-ci.com/camunda/docker-camunda-bpm-platform.svg?branch=7.13)](https://travis-ci.com/camunda/docker-camunda-bpm-platform)
+# Camunda Platform Docker Images
+[![Build Status](https://travis-ci.com/camunda/docker-camunda-bpm-platform.svg?branch=next)](https://travis-ci.com/camunda/docker-camunda-bpm-platform)
 
-This Camunda project provides docker images of the latest Camunda
-BPM platform releases. The images can be used to demonstrate and test the
-Camunda BPM platform or can be extended with own process applications. It is
+This Camunda project provides docker images of the latest 
+Camunda Platform releases. The images can be used to demonstrate and test the
+Camunda Platform or can be extended with own process applications. It is
 planned to provide images on the official [docker registry][] for every upcoming
 release, which includes alpha releases.
 
@@ -40,17 +40,14 @@ to enable authentication for the Rest-API.
 ## Supported Tags/Releases
 
 The following tag schema is used. The user has the choice between different
-application server distributions of Camunda BPM platform. `${DISTRO}` can
+application server distributions of Camunda Platform. `${DISTRO}` can
 either be `tomcat`, `wildfly` or `run`. If no `${DISTRO}` is specified the
 `tomcat` distribution is used.
 
-- `latest`, `${DISTRO}-latest`: Alywas the latest minor release of Camunda BPM
-  platform. Without
+- `latest`, `${DISTRO}-latest`: Always the latest minor release of Camunda Platform.
 - `SNAPSHOT`, `${VERSION}-SNAPSHOT`, `${DISTRO}-SNAPSHOT`,
-  `${DISTRO}-${VERSION}-SNAPSHOT`: The latest SNAPSHOT version of Camunda BPM
-  platform, which is not released yet.
-- `${VERSION}`, `${DISTRO}-${VERSION}`: A specific version of Camunda BPM
-  platform.
+  `${DISTRO}-${VERSION}-SNAPSHOT`: The latest SNAPSHOT version of Camunda Platform, which is not released yet.
+- `${VERSION}`, `${DISTRO}-${VERSION}`: A specific version of Camunda Platform.
 
 For all available tags see the [docker hub tags][].
 
@@ -59,7 +56,7 @@ For all available tags see the [docker hub tags][].
 Because `run` is a Spring Boot distribution, it can be configured through the respective environment variables. For example:
 - `SPRING_DATASOURCE_DRIVER_CLASS_NAME` the database driver class name, supported are h2 (default), mysql, and postgresql:
   - h2: `DB_DRIVER=org.h2.Driver`
-  - mysql: `DB_DRIVER=com.mysql.jdbc.Driver`
+  - mysql: `DB_DRIVER=com.mysql.cj.jdbc.Driver`
   - postgresql: `DB_DRIVER=org.postgresql.Driver`
 - `SPRING_DATASOURCE_URL` the database jdbc url
 - `SPRING_DATASOURCE_USERNAME` the database username
@@ -77,21 +74,28 @@ for convenience and compatibility and are internally mapped to `SPRING_DATASOURC
 The `JMX_PROMETHEUS` configuration is not supported, and while `DEBUG` can be used to enable debug output, it doesn't
 start a debug socket.
 
-`run` supports different startup options to choose whether or not to enable the WebApps or the REST API.
+`run` supports different startup options to choose whether or not to enable the WebApps, the REST API or Swagger UI.
+By default, all three are enabled.
 
-Passing startup parameters to enable either one or the other can be done as in the following example:
+Passing startup parameters to enable them selectively can be done by passing any combination of `--webapps`, `--rest` or 
+`--swaggerui` like in the following example:
 
+Enable only WebApps: 
 ```bash
 docker run camunda/camunda-bpm-platform:run ./camunda.sh --webapps
-docker run camunda/camunda-bpm-platform:run ./camunda.sh --rest
+``` 
+Enable only REST API and Swagger UI:
+```bash
+docker run camunda/camunda-bpm-platform:run ./camunda.sh --rest --swaggerui
 ```
 
-Additionally, a `--production` parameter is supported to switch the configuration to `/camunda/configuration/production.yml`.
+Additionally, a `--production` parameter is supported to switch the configuration to `/camunda/configuration/production.yml`. 
+This parameter also disables Swagger UI by default.
 
 ## Java Versions
 
 Our docker images are using the latest LTS OpenJDK version supported by
-Camunda BPM. This currently means:
+Camunda Platform. This currently means:
 
  - Camunda 7.12 will be based on OpenJDK 11
  - All previous versions are based on OpenJDK 8
@@ -112,12 +116,13 @@ JAVA_OPTS="-Xmx768m -XX:MaxMetaspaceSize=256m"
 ### Use docker memory limits
 
 Instead of specifying the Java memory settings it is also possible to instruct
-the JVM to respect the docker memory settings. As the image uses Java 8 it has
-to be enabled using the `JAVA_OPTS` environment variable. Using the following
-settings the JVM will respect docker memory limits specified during startup.
+the JVM to respect the docker memory settings. As the image uses Java 11 it does
+not have to be enabled explicitly using the `JAVA_OPTS` environment variable. 
+If you want to set the memory limits manually you can restore the pre-Java-11-behavior
+by setting the following environment variable.
 
 ```
-JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+JAVA_OPTS="-XX:-UseContainerSupport"
 ```
 
 ## Database environment variables
@@ -132,7 +137,7 @@ variables:
 - `DB_CONN_MINIDLE` the minimum number of idle connections (default: `5`)
 - `DB_DRIVER` the database driver class name, supported are h2, mysql, and postgresql:
   - h2: `DB_DRIVER=org.h2.Driver`
-  - mysql: `DB_DRIVER=com.mysql.jdbc.Driver`
+  - mysql: `DB_DRIVER=com.mysql.cj.jdbc.Driver`
   - postgresql: `DB_DRIVER=org.postgresql.Driver`
 - `DB_URL` the database jdbc url
 - `DB_USERNAME` the database username
@@ -197,9 +202,9 @@ docker run -d --name camunda -p 8080:8080 -e SKIP_DB_CONFIG=true \
 
 ## Waiting for database
 
-Starting the Camunda BPM Docker image requires the database to be already available.
-This is quite a challenge when the database and the Camunda BPM are both docker containers spawned simualtenously eg. by `docker-compose` or inside a Kubernetes Pod.
-To help with that, the Camunda BPM Docker image includes [wait-for-it.sh](https://github.com/vishnubob/wait-for-it) to allow the container to wait until a 'host:port' is ready.
+Starting the Camunda Platform Docker image requires the database to be already available.
+This is quite a challenge when the database and the Camunda Platform are both docker containers spawned simualtenously eg. by `docker-compose` or inside a Kubernetes Pod.
+To help with that, the Camunda Platform Docker image includes [wait-for-it.sh](https://github.com/vishnubob/wait-for-it) to allow the container to wait until a 'host:port' is ready.
 The mechanism can be configured by two environment variables:
 
 - `WAIT_FOR`: the service `host:port` to wait for
@@ -222,7 +227,7 @@ docker run -d --name camunda -p 8080:8080 --link postgresql:db \
 
 ## Volumes
 
-The Camunda BPM Platform is installed inside the `/camunda` directory. Which
+The Camunda Platform is installed inside the `/camunda` directory. Which
 means the tomcat configuration files are inside the `/camunda/conf/` directory
 and the deployments on tomcat are in `/camunda/webapps/`. The directory
 structure depends on the application server.
@@ -245,15 +250,15 @@ This is only supported for `wildfly` and `tomcat` distributions.
 
 ## Build
 
-The image can be used to build a Docker image for a given Camunda BPM platform
+The image can be used to build a Docker image for a given Camunda Platform
 version and distribution.
 
 ### Build a released version
 
 To build a community image specify the `DISTRO` and `VERSION` build
 argument. Possible values for `DISTRO` are `tomcat`, `wildfly` and `run` (if the
-Camunda BPM platform version already supported it). The `VERSION` is the
-Camunda BPM platform version you want to build, i.e. `7.12.0`.
+Camunda Platform version already supported it). The `VERSION` is the
+Camunda Platform version you want to build, i.e. `7.12.0`.
 
 ```
 docker build -t camunda-bpm-platform \
@@ -406,7 +411,7 @@ docker run -d --name camunda -p 8080:8080 \
 Branches and their roles in this repository:
 
 - `next` (default branch) is the branch where new features and bugfixes needed to support the current `master` of [camunda-bpm-platform repo](https://github.com/camunda/camunda-bpm-platform) go into
-- `7.x` branches get created from `next` when a Camunda BPM minor release happened and only receive backports of bugfixes when absolutely necessary
+- `7.x` branches get created from `next` when a Camunda Platform minor release happened and only receive backports of bugfixes when absolutely necessary
 
 
 ## License
